frame/support/test/tests/pallet_ui/storage_unexpected_max_values.stderr
error: Invalid pallet::storage, expect no max_values attributes for
`StorageValue` as it is always `1`, expect `#[pallet::storage]`
  --> $DIR/storage_unexpected_max_values.rs:18:12
   |
18 |     #[pallet::storage(max_values = 4u32)]
   |               ^^^^^^^
